--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"db:migrations:generate": "drizzle-kit generate:pg",
+		"db:migrations:push": "node -r esbuild-register src/drizzle/index.ts",
+		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
+		"@picocss/pico": "^1.5.10",
 		"@types/node": "20.6.0",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
+		"@vercel/postgres": "^0.4.1",
 		"autoprefixer": "10.4.15",
+		"drizzle-orm": "^0.28.6",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.4.19",
 		"next": "13.4.19",
@@ -23,6 +29,8 @@
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"drizzle-kit": "^0.19.13",
+		"pg": "^8.11.3",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4"
 	}
