--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"db:migrations:generate": "drizzle-kit generate:pg",
-		"db:migrations:push": "node -r esbuild-register src/drizzle/index.ts",
+		"db:migrations:push": "node -r esbuild-register src/drizzle/migrate.ts",
+		"db:seed": "node -r esbuild-register src/drizzle/seed.ts",
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
@@ -26,9 +27,12 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"tailwindcss": "3.3.3",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.0.2",
+		"@types/uuid": "^9.0.3",
 		"drizzle-kit": "^0.19.13",
 		"pg": "^8.11.3",
 		"prettier": "^3.0.3",
