--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react-dom": "18.2.7",
 		"@vercel/postgres": "^0.4.1",
 		"autoprefixer": "10.4.15",
+		"bcrypt-ts": "^4.0.0",
 		"drizzle-orm": "^0.28.6",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.4.19",
@@ -28,7 +29,8 @@
 		"react-dom": "18.2.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.2",
