--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
 		"@vercel/postgres": "^0.4.1",
 		"autoprefixer": "10.4.15",
 		"bcrypt-ts": "^4.0.0",
+		"cookies-next": "^4.0.0",
 		"drizzle-orm": "^0.28.6",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.4.19",
+		"jose": "^4.14.6",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
