--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"db:studio": "drizzle-kit studio"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.1",
 		"@picocss/pico": "^1.5.10",
 		"@tanstack/react-query": "^4.35.3",
 		"@types/node": "20.6.0",
@@ -30,6 +31,7 @@
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.46.1",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2",
 		"uuid": "^9.0.1",
