--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"test": "vitest",
 		"db:migrations:generate": "drizzle-kit generate:pg",
 		"db:migrations:push": "node -r esbuild-register src/drizzle/migrate.ts",
 		"db:seed": "node -r esbuild-register src/drizzle/seed.ts",
@@ -44,6 +45,7 @@
 		"drizzle-kit": "^0.19.13",
 		"pg": "^8.11.3",
 		"prettier": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.4"
+		"prettier-plugin-tailwindcss": "^0.5.4",
+		"vitest": "^0.34.5"
 	}
 }
