--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.1",
+		"@nextui-org/react": "^2.1.13",
 		"@picocss/pico": "^1.5.10",
 		"@tanstack/react-query": "^4.35.3",
-		"@types/node": "20.6.0",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"@vercel/postgres": "^0.4.1",
@@ -27,6 +27,7 @@
 		"drizzle-orm": "^0.28.6",
 		"eslint": "8.49.0",
 		"eslint-config-next": "13.4.19",
+		"framer-motion": "^10.16.4",
 		"jose": "^4.14.6",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
@@ -41,6 +42,7 @@
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.2",
 		"@tanstack/eslint-plugin-query": "^4.34.1",
+		"@types/node": "^20.8.0",
 		"@types/uuid": "^9.0.3",
 		"drizzle-kit": "^0.19.13",
 		"pg": "^8.11.3",
