--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@hookform/resolvers": "^3.3.1",
 		"@nextui-org/react": "^2.1.13",
 		"@picocss/pico": "^1.5.10",
+		"@tabler/icons-react": "^2.38.0",
 		"@tanstack/react-query": "^4.35.3",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
