--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
 	"printWidth": 80,
 	"semi": true,
 	"singleQuote": true,
-	"trailingComma": "all"
+	"trailingComma": "all",
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
